--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   box-sizing: border-box;
   font-family: 'Rubik', sans-serif;
   height: 100vh;
+  background-image: url(./images/pattern-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -20,6 +23,7 @@ h1 {
   text-transform: capitalize;
   color: var(--white);
   text-align: center;
+  margin: 0;
 }
 
 #map {
