--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ main {
   background-image: url(./images/pattern-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 30%;
+  /* height: 30%; */
+  grid-row: 1/3;
+    grid-column: 1/5;
+    padding-bottom: 10rem;
 }
 
 h1 {
@@ -37,15 +40,16 @@ h1 {
 #map {
   height: 33rem;
   grid-column: 1/5;
-  grid-row: 2/4;
+  grid-row: 3/9;
 }
 
-.section {
+/* .section {
   height: 70%;
-}
+} */
 
 .grid-container {
   display: grid;
+  grid-template-rows: 0.5fr 0.5fr;
 }
 
 .flex-cover {
@@ -55,6 +59,8 @@ h1 {
   background-color: teal;
   padding: 1.5rem;
   grid-column: 1/5;
-  grid-row: 2/2;
+  grid-row: 2/4;
   z-index: 1000;
+  width: clamp(17rem, 41.75rem + 1.75vw, 43rem);;
+  margin: auto;
 }
