--- a/style.css
+++ b/style.css
@@ -18,15 +18,19 @@ body {
   background-repeat: no-repeat; */
 }
 
-main {
+/* Main Styling */
+
+.main {
   background-image: url(./images/pattern-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
   /* height: 30%; */
   grid-row: 1/3;
-    grid-column: 1/5;
-    padding-bottom: 10rem;
+  grid-column: 1/5;
+  padding-bottom: 10rem;
 }
+
+/* h1 Styling */
 
 h1 {
   font-weight: 500;
@@ -36,6 +40,8 @@ h1 {
   margin: 0;
   padding-top: 2rem;
 }
+
+/* Map Styling */
 
 #map {
   height: 33rem;
@@ -47,20 +53,33 @@ h1 {
   height: 70%;
 } */
 
+/* Grid Container */
+
 .grid-container {
   display: grid;
   grid-template-rows: 0.5fr 0.5fr;
 }
 
+/* Flex box */
+
 .flex-cover {
   display: flex;
   justify-content: space-evenly;
-  /* border: 2px solid var(--white); */
-  background-color: teal;
+  border: 2px solid var(--white);
+  background-color: var(--white);
   padding: 1.5rem;
   grid-column: 1/5;
   grid-row: 2/4;
   z-index: 1000;
   width: clamp(17rem, 41.75rem + 1.75vw, 43rem);;
   margin: auto;
+  border-radius: 10px;
+}
+
+/* Text Styling */
+
+p {
+  color: var(--darkGray);
+  font-size: clamp(1.1rem, 0.95rem + 1.5vw, 1.3rem);
+  text-transform: uppercase;
 }
