--- a/style.css
+++ b/style.css
@@ -49,10 +49,6 @@ h1 {
   grid-row: 3/9;
 }
 
-/* .section {
-  height: 70%;
-} */
-
 /* Grid Container */
 
 .grid-container {
@@ -69,7 +65,7 @@ h1 {
   grid-column: 1/5;
   grid-row: 2/4;
   z-index: 1000;
-  width: clamp(17rem, 41.75rem + 1.75vw, 43rem);;
+  width: calc(90% - 30px);
   margin: auto;
   border-radius: 10px;
 }
@@ -83,10 +79,26 @@ h1 {
   color: var(--darkGray);
   font-size: clamp(0.8rem, 0.75rem + 1.5vw, 1rem);
   text-transform: uppercase;
+  font-weight: 700;
 }
 
 .very-dark-gray {
   color: var(--veryDarkGray);
   font-size: clamp(1.1rem, 0.95rem + 1.5vw, 1.3rem);
   text-transform: capitalize;
+  margin: 0;
+  border-right: 1px solid var(--darkGray);
+  font-weight: 500;
+}
+
+.p-left {
+  padding-left: 1rem;
+}
+
+#ip {
+  padding-right: 1rem;
+}
+
+#isp {
+  border-right: none;
 }
