--- a/style.css
+++ b/style.css
@@ -13,9 +13,6 @@ body {
   box-sizing: border-box;
   font-family: 'Rubik', sans-serif;
   height: 100vh;
-  /* background-image: url(./images/pattern-bg.png);
-  background-size: cover;
-  background-repeat: no-repeat; */
 }
 
 /* Main Styling */
@@ -24,10 +21,9 @@ body {
   background-image: url(./images/pattern-bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  /* height: 30%; */
   grid-row: 1/3;
   grid-column: 1/5;
-  padding-bottom: 10rem;
+  padding-bottom: 6rem;
 }
 
 /* h1 Styling */
@@ -39,6 +35,40 @@ h1 {
   text-align: center;
   margin: 0;
   padding-top: 2rem;
+}
+
+/* Input */
+
+.input-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3rem;
+}
+
+input {
+  font-size: var(--textInput);
+  color: var(--darkGray);
+  width: calc(40% - 30px);
+  padding: 1rem 0.3rem;
+  outline: none;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  border: none;
+}
+
+.fa-solid {
+  background-color: #000;
+  padding: 1.2rem;
+  color: var(--white);
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  border: none;
+}
+
+.fa-solid:hover {
+  cursor: pointer;
+  background-color: var(--veryDarkGray);
 }
 
 /* Map Styling */
@@ -63,7 +93,7 @@ h1 {
   background-color: var(--white);
   padding: 1.5rem;
   grid-column: 1/5;
-  grid-row: 2/4;
+  grid-row: 2/5;
   z-index: 401;
   width: calc(90% - 30px);
   margin: auto;
@@ -107,11 +137,15 @@ h1 {
 and (min-device-width: 320px)
 and (max-device-width: 580px) {
 
+  /* Text Styling */
+
   .text-grid {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+
+  /* Text Order */
 
   #order1 {
     order: 1;
@@ -155,5 +189,21 @@ and (max-device-width: 580px) {
 
   .dark-gray {
     font-size: 0.8em;
+  }
+
+  /* Input Styling */
+
+  .input-container {
+    margin-top: 1.5rem;
+  }
+
+  input {
+    width: calc(80% - 30px);
+  }
+
+  /* Main Styling */
+
+  .main {
+    padding-bottom: 12rem;
   }
 }
